✨ Add Kotlin Gradle build conventions and utility tasks
- 🏗️ Introduced custom Gradle plugins and extensions for build conventions.
- 🛠️ Added tasks for copying libraries, versioning, project management, and text processing.
- 🔍 Enhanced Detekt configuration for improved code analysis.
- 📦 Integrated library dependencies setup for better project management.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ detekt = "1.23.6"
 [libraries]
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetime" }
+detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 
 [plugins]
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
